src/objects/MUSW__Report_Trigger__c.object
<CustomObject>
    <fields>
        <fullName>MUSW__Parameters__c</fullName>
        <description>pv0=xyz&amp;pv1=abc&amp;...</description>
        <inlineHelpText>pv0=xyz&amp;pv1=abc&amp;...</inlineHelpText>
        <label>Report Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Recipient__c</fullName>
        <label>Email Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Report Trigger</label>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>